<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trans_btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:background="#ffabcdef"
        android:text="@string/trans"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#ffabcdef"
            android:text="@string/start"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/end_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#abcdef"
            android:text="@string/end"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#abcdef"
            android:text="@string/cancel"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pause_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#abcdef"
            android:text="@string/pause"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resume_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#abcdef"
            android:text="@string/resume"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reverse_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#abcdef"
            android:text="@string/reverse"
            android:textColor="@color/black" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.组合属性动画，实现多种动画的组合"/>

        <ImageView
            android:id="@+id/my_love"
            android:layout_width="245dp"
            android:layout_height="245dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/my_love_idle"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.transationDrawble动画，实现图片平滑切换"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/my_love_basha"
                android:layout_width="245dp"
                android:layout_height="245dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/my_love_basha" />

            <ImageView
                android:id="@+id/my_love_idle"
                android:layout_width="245dp"
                android:layout_height="245dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/my_love_idle" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>